--- a/public_html/index2.html
+++ b/public_html/index2.html
@@ -6,10 +6,11 @@
   <title>Planificador de procesos</title>
   <!-- Enlace a Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="js/script.js"></script>
 </head>
 <body>
 
-  <nav class="navbar navbar-light bg-light fixed-top">
+ <!-- <nav class="navbar navbar-light bg-light fixed-top">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -31,12 +32,34 @@
             <input id="cantidadProcesos" class="form-control me-2" type="number" placeholder="Enter the number" aria-label="Number of processes" min="1" value="1" required>
             <button type="button" class="btn btn-outline-success mt-2" onclick="validateForm()">Confirm</button>
           </form>
-          <div id="labelsContainer"></div>
-          <script src="script.js"></script>
+          
         </div>
       </div>
     </div>
   </nav>
+  -->
+  <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Planificador de procesos</h5>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+          </ul>
+          <form class="d-flex flex-column">
+            <label for="cantidadProcesos" class="mb-2">Please enter the number of processes:</label>
+            <input id="cantidadProcesos" class="form-control me-2" type="number" placeholder="Enter the number" aria-label="Number of processes" min="1" value="1" required>
+            <button type="button" class="btn btn-outline-success mt-2" onclick="validateForm()">Confirm</button>
+          </form>
+          
+        </div>
+  <div id="labelsContainer"></div>
+  <div id="table"></div>
+  <button type="button" class="btn btn-outline-success mt-2" onclick="getValue()">Confirm</button>
+  <div id="tableProcess"></div>
+  
 
 <!-- Enlace a jQuery -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
