Se han realizado las validaciones de la información del proceso ingresada por el usuario

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,6 +16,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             body {
                 padding-top: 50px;
                 padding-bottom: 20px;
+                text-align: center;
             }
         
 
@@ -23,7 +24,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 table {
                 border-collapse: collapse;
                 width: 50%;
-                margin-top: 20px;
+                margin: 20px auto;
+
             }
             table, th, td {
                 border: 1px solid black;
