--- a/public_html/index.html
+++ b/public_html/index.html
@@ -177,11 +177,7 @@ table {
                 </tr>
             </tbody>
         </table>
-
-
-        
-
-
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="js/script.js"></script>
 
 
