Tabla de procesos, tiempos de ejecución y estados realizada

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@ table {
             .yellow {
                 background-color: yellow;
             }
-
+            .uppercase-input {
+             text-transform: uppercase;
+            }
 
         </style>
 
@@ -148,7 +150,6 @@ table {
         <h2>Dispatcher Process(Process States for the trace)</h2>
         <button onclick="dispatcher()">Dispatcher Run</button>
         <p id="outDistpatcher"></p>
-
 
 
         <table>
